welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:20: error: ':' expected but ')' found.
def avance(k){
            ^FlowerPot:43: error: identifier expected but '}' found.
}
^